--- a/src/assets/styles/style.css
+++ b/src/assets/styles/style.css
@@ -68,10 +68,10 @@ strong { font-weight: var(--fw-bold) }
 
 /* Buttons */
 
-.btn {
+.my-services .btn {
     display: inline-block;
     padding: .5em 2.5em;
-    background: var(--clr-accent);
+    background: var(--clr-accent) ;
     color: var(--clr-dark);
     text-decoration: none;
     cursor: pointer;
@@ -82,7 +82,7 @@ strong { font-weight: var(--fw-bold) }
     transition: transform 200ms ease-in-out;
 }
 
-.btn:hover {
+.my-services .btn:hover {
     transform: scale(1.1);
 }
 
